# poroshell

./: .gitignore
crates/app/: Cargo.toml
crates/app/src/: error.rs  main.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs
crates/openapi/: Cargo.toml
crates/openapi/src/: error.rs  lib.rs  reader.rs  types.rs
crates/schema/: Cargo.toml  README.md  openapi.json
crates/schema/src/: error.rs  help.rs  lib.rs  openapi.rs  patch.rs
crates/schema/src/serde/: de.rs  ser.rs
crates/tui/: Cargo.toml
crates/tui/src/: cmds.rs  ids.rs  logger.rs  main.rs  msgs.rs
crates/tui/src/ui/: background.rs  mod.rs  utils.rs
crates/tui/src/ui/components/: global_listener.rs  mod.rs  phantom_listener.rs  radio_navigation.rs
crates/tui/src/ui/components/dialogs/: mod.rs  quit.rs
crates/tui/src/ui/components/pages/: mod.rs
crates/tui/src/ui/components/pages/home/: libraries.rs  mod.rs  navigation.rs  welcome.rs
crates/tui/src/ui/model/: mod.rs  update.rs  view.rs
