[package]
name = "openapi"
version = "0.1.0"
edition = "2024"

[dependencies]
hashlink = { version = "0.10.0", features = ["serde_impl"] }
serde = { version = "1.0.219" }
serde_derive = "1.0.219"
serde_json = "1.0.140"
derive_more = { version = "2.0.1", features = ["from", "error", "display"] }
ureq = "3.0.11"
