[package]
name = "lcu_schema"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
derive_more = { version = "2.0.1", features = [
    "from",
    "error",
    "display",
    "deref",
    "deref_mut",
] }
fxhash = "0.2.1"
itertools = "0.14.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"


irelia = { version = "0.10.0", optional = true }
tokio = { version = "1.45.0", features = ["macros", "rt"], optional = true }

[features]
default = ["irelia"]
irelia = ["dep:irelia", "dep:tokio"]
