[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
data = { path = "../data" }
color-eyre = "0.6.4"
reqwest = { version = "0.12.15", features = ["json"] }
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tui-realm-stdlib = "2.0.1"
tuirealm = "2.1.0"
open = "5.3.2"
